[tool.poetry]
name = "foss-android-crawler"
version = "0.1.0"
description = ""
authors = ["AkiChase <1003019131@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
lxml = "^5.3.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
